tdf#117984 Make MapMode thread-safe

...using o3tl::ThreadSafeRefCountingPolicy due to being
used indirectly (~Bitmap) in parallelized 3D renderer

Change-Id: Ia5eab219c6844570a04c83f71cca5e7b7da4326d
Reviewed-on: https://gerrit.libreoffice.org/55365
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Armin Le Grand <Armin.Le.Grand@cib.de>
(cherry picked from commit d84517a171a17dfa12f25ad4305a06b20f3b7c76)
Reviewed-on: https://gerrit.libreoffice.org/55411
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>