include/vcl/mapmod.hxx
@@ -67,7 +67,9 @@ public:
     friend VCL_DLLPUBLIC SvStream& ReadMapMode( SvStream& rIStm, MapMode& rMapMode );
     friend VCL_DLLPUBLIC SvStream& WriteMapMode( SvStream& rOStm, const MapMode& rMapMode );
 
-    typedef o3tl::cow_wrapper< ImplMapMode > ImplType;
+    // tdf#117984 needs to be thread-safe due to being used e.g. in Bitmaps
+    // vcl::ScopedBitmapAccess in parallelized 3D renderer
+    typedef o3tl::cow_wrapper< ImplMapMode, o3tl::ThreadSafeRefCountingPolicy > ImplType;
 
 private:
     ImplType        mpImplMapMode;
